Shim so egg gets built with .../c/h/README.txt
If I don't have the setuptools-git shim, when the eggs are generated, they don't have .../collective/hostout/README.txt. When we try to install this egg on the target, it fails because it lacks this file.

--- a/demo_develop.cfg
+++ b/demo_develop.cfg
@@ -9,22 +9,17 @@ develop =
 
 [host]
 recipe = collective.hostout
-#host = 192.168.91.5
-#user = hosting
-buildout-group = hosting
-identity-file = demoidentity
+host = # provide a POSIX compliant host
+user = # the username to log in with
+buildout-group = # the group that user belongs to
+identity-file = demoidentity # copy the key to this file
+path = /tmp # path on the server where the demo should be installed
+buildout-cache = /tmp/buildout-cache # path to the cache location
 buildout = demo_production.cfg
-path = /home/hosting/ploneconf
-buildout-cache = /home/hosting/buildout-cache
-shell = /usr/local/bin/bash -c
-=======
-extends = 
-  hostout.redhat
-host = 192.168.56.3
-user = chris
-buildout = buildout.cfg
-
->>>>>>> Stashed changes:buildout.cfg
+# shell = /usr/local/bin/bash -c # FreeBSD users, uncomment this line!
+post-commands = 
+    bin/paster serve demo/hellowsgi/paste.ini &
+include = demo/hellowsgi/paste.ini
 
 [test]
 recipe  = zc.recipe.testrunner
@@ -40,5 +35,3 @@ eggs =
 apache-libcloud = git git://github.com/apache/libcloud.git
 hostout.supervisor = git git@github.com:collective/hostout.supervisor.git
 hostout.ubuntu  = git git@github.com:collective/hostout.ubuntu.git
-paramiko = git http://github.com/robey/paramiko.git
-hostout.redhat = git git@github.com:shentonfreude/hostout.redhat.git
