more merging from tomster

--- a/demo_develop.cfg
+++ b/demo_develop.cfg
@@ -9,17 +9,14 @@ develop =
 
 [host]
 recipe = collective.hostout
-host = # provide a POSIX compliant host
-user = # the username to log in with
-buildout-group = # the group that user belongs to
-identity-file = demoidentity # copy the key to this file
-path = /tmp # path on the server where the demo should be installed
-buildout-cache = /tmp/buildout-cache # path to the cache location
+extends = hostout.redhat
+host = 192.168.56.3
+user = hosting
+buildout-group = hosting
+identity-file = demoidentity
 buildout = demo_production.cfg
-# shell = /usr/local/bin/bash -c # FreeBSD users, uncomment this line!
-post-commands = 
-    bin/paster serve demo/hellowsgi/paste.ini &
-include = demo/hellowsgi/paste.ini
+path = /home/hosting/ploneconf
+buildout-cache = /home/hosting/buildout-cache
 
 [test]
 recipe  = zc.recipe.testrunner
@@ -35,3 +32,5 @@ eggs =
 apache-libcloud = git git://github.com/apache/libcloud.git
 hostout.supervisor = git git@github.com:collective/hostout.supervisor.git
 hostout.ubuntu  = git git@github.com:collective/hostout.ubuntu.git
+paramiko = git http://github.com/robey/paramiko.git
+hostout.redhat = git git@github.com:shentonfreude/hostout.redhat.git
