fix demo buildout

--- a/demo_develop.cfg
+++ b/demo_develop.cfg
@@ -2,21 +2,28 @@
 parts += test host
 extends = demo_base.cfg
 extensions = mr.developer
-auto-checkout = *
+auto-checkout =
+  hostout.supervisor
+  hostout.cloud
 develop = 
   .
   demo/hellowsgi
 
 [host]
 recipe = collective.hostout
-host = # provide a POSIX compliant host
-user = # the username to log in with
-buildout-group = # the group that user belongs to
-identity-file = demoidentity # copy the key to this file
-path = /tmp # path on the server where the demo should be installed
-buildout-cache = /tmp/buildout-cache # path to the cache location
+#host = # provide a POSIX compliant host
+#user = # the username to log in with
+# the group that user belongs to
+buildout-group =
+# copy the key to this file
+identity-file = demoidentity
+# path on the server where the demo should be installed
+path = /tmp
+# path to the cache location
+buildout-cache = /tmp/buildout-cache
 buildout = demo_production.cfg
-# shell = /usr/local/bin/bash -c # FreeBSD users, uncomment this line!
+# FreeBSD users, uncomment this line!
+# shell = /usr/local/bin/bash -c
 post-commands = 
     bin/paster serve demo/hellowsgi/paste.ini &
 include = demo/hellowsgi/paste.ini
@@ -32,9 +39,9 @@ eggs =
   paramiko
 
 [versions]
-pycrypto = 2.0.1
+pycrypto = 2.3
 
 [sources]
 apache-libcloud = git git://github.com/apache/libcloud.git
 hostout.supervisor = git git@github.com:collective/hostout.supervisor.git
-hostout.ubuntu  = git git@github.com:collective/hostout.ubuntu.git
+hostout.cloud = git git@github.com:collective/hostout.cloud.git
